Serve Index.html file on (GET /), Terminal Arguments and Custom path to get files